--- a/netflix_login.html
+++ b/netflix_login.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="netflix.css">
 </head>
 <body>
+    
     <div id="container">
         <h1>
             Sign in
@@ -25,5 +26,13 @@
         <a href="https://www.youtube.com/"><h5>forgot your password</h5></a>
 
     </div>
+    <script>
+        console.log("Praveen Kumar");
+        console.log("praveenash2002@gmail.com")
+        console.log("from G-tec")
+        alert(" Praveen Kumar \n praveenash2002@gmail.com \n from G-tec")
+        
+
+    </script>
 </body>
 </html>
